test/bad/generics/type05.px

func f<T>(T x) def
    x = 3

f("")
